--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "dotenv": "^10.0.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
+    "vuejs-datatable": "^2.0.0-alpha.7",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
