--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "dotenv": "^10.0.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
-    "vuejs-datatable": "^2.0.0-alpha.7",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
@@ -26,6 +25,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint-plugin-vue": "^7.0.0",
+    "vue-cli-plugin-vuetify": "~2.4.1"
   }
 }
