--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-vue": "^7.0.0",
-    "vue-cli-plugin-vuetify": "~2.4.1"
+    "eslint-plugin-vue": "^7.0.0"
   }
 }
